# esp32-wol

./: .gitignore  CMakeLists.txt  README.md  STYLE_GUIDE.md  sdkconfig.defaults
.github/workflows/: esp-idf-build.yml
main/: CMakeLists.txt  Kconfig.projbuild  common.h  esp32-wol.c  ethernet_app.c  ethernet_app.h  ethernet_iface.c  ethernet_iface.h  ethernet_wol.c  ethernet_wol.h  http_api.c  http_api.h  http_api_index.c  http_api_index.h  http_api_shared.h  http_api_wol.c  http_api_wol.h  main.c  nvs_init.c  nvs_init.h  wifi_app.c  wifi_app.h  wifi_iface.c  wifi_iface.h
main/www/: index.html
