idf_component_register(SRCS "main.c"
                            "ethernet_iface.c"
                            "ethernet_wol.c"
                            "http_api.c"
                            "http_api_index.c"
                            "http_api_wol.c"
                            "nvs_init.c"
                            "wifi_iface.c"
                    INCLUDE_DIRS "."
                    EMBED_FILES "www/index.html")
